# Bewise-test

./: .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py
app/api/: deps.py
app/api/endpoints/: quiz.py
app/api/schemas/: quiz.py
app/core/: config.py
app/db/: base.py  setup.py
app/db/cruds/: crud_quiz.py
app/db/migrations/: env.py
app/db/migrations/versions/: f51bb89968c4_create_quiz_table.py  ff0e5e154541_initial_migration.py
app/db/models/: quiz.py
requirements/: reqs.txt
